# Light_YOLO

./: CMakeLists.txt  Light.cpp  Light.h  README.md  main.cpp  start.sh
Yolo/: CMakeLists.txt  Yolov5.h  common.h  cuda_utils.h  yololayer.h  yolov5.cpp  yolov5_trt.py
driver/: CMakeLists.txt
driver/camera/: CMakeLists.txt
driver/camera/inc/: camera.h
driver/camera/src/: camera.cpp
driver/serialPort/: CMakeLists.txt
driver/serialPort/inc/: serialPort.h
driver/serialPort/src/: serialPort.cpp
para/: camera.xml
park/: CMakeLists.txt
park/inc/: boundarydetection.h  park.h  transform.h
park/src/: boundarydetection.cpp  park.cpp  rotate.cpp  transform.cpp
thread/inc/: YoloThread.h  autodrivethread.h  cameraThread.h  serialPortReadWriteThread.h  thread.h
thread/src/: .YoloThread.cpp.swp  .cameraThread.cpp.swp  YoloThread.cpp  autodrivethread.cpp  cameraThread.cpp  serialPortReadWriteThread.cpp  thread.cpp
